--- a/AppGrupal/app/src/main/res/layout/fragment_alimentos.xml
+++ b/AppGrupal/app/src/main/res/layout/fragment_alimentos.xml
@@ -1,15 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="12dp"
-    tools:context=".Alimentos">
+    tools:context=".Servicios">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="esta categoria es la de alimentos" />
+        android:text="esta categoria es de Alimentos" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/btnRapidas"
+        android:layout_width="159dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="70dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:text="vendedor de ropa"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.475"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnFrutas"
+        app:layout_constraintVertical_bias="0.0"
+        tools:text="Rapida" />
+
+
+    <Button
+        android:id="@+id/btnPostres"
+        android:layout_width="172dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="70dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="68dp"
+        android:text="Vendedor de Postres"
+        app:layout_constraintBottom_toTopOf="@+id/btnFrutas"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/btnFrutas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="vendedor de comida rapida"
+        app:layout_constraintBottom_toTopOf="@+id/btnRapidas"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnPostres" />
+
+
+</android.support.constraint.ConstraintLayout>
